<resources>
    <string name="app_name">My Sample App</string>
    <string name="complete_profile">Tell us about you</string>
    <string name="submit">Submit</string>
    <string name="login_with_google">Login with Google</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="enter_your_number">Enter your number</string>
    <string name="live_order">LIVE ORDER</string>
    <string name="category">CATEGORY</string>
    <string name="profile">PROFILE</string>
    <string name="add_category">Add Category</string>
    <string name="add_product">Add Product</string>
    <string name="add_offer">Add Offer</string>
    <string name="add_banner">Add Banner</string>
    <string name="enter_category_name">Enter Category Name</string>
    <string name="enter_banner_name">Enter Banner Name</string>
    <string name="enter_product_name">Enter Product Name</string>
    <string name="select_file">Select File</string>
    <string name="select_category">Select Category</string>
    <string name="category_list">Category List</string>
    <string name="close">close</string>
    <string name="back_button">Back Button</string>
    <string name="add_in_unit">Add in Unit</string>
    <string name="add_in_per_kg_price">Add in per KG price</string>
    <string name="add">Add</string>
    <string name="product_image">product image</string>
    <string name="test_string">As an intellectual object, a book is prototypically a composition of such great length that it takes a considerable investment of time to compose and still considered as an investment of time to read. In a restricted sense, a book is a self-sufficient section or part of a longer composition, a usage reflecting that, in antiquity, long works had to be written on several scrolls and each scroll had to be identified by the book it contained. Each part of Aristotles Physics is called a book. In an unrestricted sense, a book is the compositional whole of which such sections, whether called books or chapters or parts, are parts.</string>
    <string name="product_brand">Product Brand</string>
    <string name="drop_down">drop down</string>
    <string name="is_selling_fast">Is selling fast</string>
    <string name="product_out_of_stock">Mark product out of stock</string>
    <string name="add_shop_details">Add Shop Details</string>
    <string name="share_app">Share app</string>
    <string name="add_delivery_boy">Add delivery boy</string>
    <string name="rate_app">Rate app</string>
    <string name="select_language">Select language</string>
    <string name="edit">Edit</string>
    <string name="delete">Delete</string>
    <string name="logout">Logout</string>
    <string name="txt_description">Find your perfect place for eat, meet and book it everywhere</string>
    <string name="enter_store_name">Enter store name</string>
    <string name="logout_description">Hey! are you sure, you want to logout.</string>
    <string name="fab">fab</string>
</resources>