<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

    </data>

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="20dp"
        android:padding="10dp"
        app:cardCornerRadius="10dp"
        app:cardElevation="10dp"
        android:layout_marginTop="20dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <TextView
                android:id="@+id/txtCompleteProfile"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/purple_200"
                android:fontFamily="serif"
                android:gravity="center_horizontal"
                android:padding="5dp"
                android:text="@string/complete_profile"
                android:textColor="@color/white"
                android:textSize="17sp" />
            <TextView
                android:id="@+id/txtWelcome"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="10dp"
                android:fontFamily="serif"
                android:layout_below="@+id/txtCompleteProfile"
                android:text="Hey, Welcome Anil!"
                android:textColor="@color/black" />

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/txtWelcome"
                app:endIconMode="clear_text"
                android:id="@+id/textInputLayout"
                android:layout_marginHorizontal="20dp"
                android:hint="@string/enter_your_number"
                android:layout_alignParentStart="true"
                android:layout_alignParentEnd="true"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="number"
                    android:maxLength="10"
                    android:id="@+id/editNumber"/>

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/textInputLayout"
                app:endIconMode="clear_text"
                android:id="@+id/textInputLayout2"
                android:layout_marginHorizontal="20dp"
                android:layout_marginTop="5dp"
                android:hint="@string/enter_store_name"
                android:layout_alignParentStart="true"
                android:layout_alignParentEnd="true"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textCapWords"
                    android:maxLines="1"
                    android:id="@+id/edStoreName"/>

            </com.google.android.material.textfield.TextInputLayout>

            <Button
                android:id="@+id/btnSubmit"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/textInputLayout2"
                android:layout_centerHorizontal="true"
                android:layout_marginVertical="10dp"
                android:backgroundTint="@color/purple_200"
                android:text="@string/submit" />
            <ProgressBar
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/textInputLayout2"
                android:layout_marginVertical="10dp"
                android:visibility="gone"
                android:layout_centerHorizontal="true"
                android:id="@+id/progressBar"/>
        </RelativeLayout>
    </androidx.cardview.widget.CardView>

</layout>