<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/off_white"
        tools:context=".fragment.category.CategoryFragment">

        <LinearLayout
            android:id="@+id/linear1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:gravity="center"
            android:orientation="horizontal"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <androidx.cardview.widget.CardView
                android:id="@+id/cardCategory"
                android:layout_width="0dp"
                android:layout_height="120dp"
                android:layout_margin="10dp"
                android:layout_weight="1"
                android:clickable="true"
                android:focusable="true"
                app:cardBackgroundColor="#9FDBF6"
                android:foreground="?android:attr/selectableItemBackground"
                app:cardCornerRadius="5dp"
                app:cardElevation="2dp">

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <ImageView
                        android:id="@+id/imageAdd"
                        android:layout_width="80dp"
                        android:layout_height="80dp"
                        android:layout_alignParentEnd="true"
                        android:layout_alignParentBottom="true"
                        android:contentDescription="@string/add"
                        android:padding="15dp"
                        android:src="@drawable/application" />

                    <TextView
                        android:id="@+id/addCategory"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_gravity="start"
                        android:fontFamily="serif"
                        android:gravity="start"
                        android:layout_alignParentStart="true"
                        android:layout_alignParentTop="true"
                        android:layout_marginTop="10dp"
                        android:layout_marginStart="10dp"
                        android:text="@string/add_category"
                        android:textColor="@color/black"
                        android:textSize="17sp" />
                </RelativeLayout>

            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:id="@+id/cardProduct"
                android:layout_width="0dp"
                android:layout_height="120dp"
                android:layout_margin="10dp"
                android:layout_weight="1"
                android:clickable="true"
                android:focusable="true"
                android:foreground="?android:attr/selectableItemBackground"
                app:cardCornerRadius="5dp"
                app:cardElevation="2dp"
                app:cardBackgroundColor="#F8D6A4"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/cardCategory">

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">
                <ImageView
                    android:layout_width="80dp"
                    android:layout_height="80dp"
                    android:layout_alignParentEnd="true"
                    android:layout_alignParentBottom="true"
                    android:contentDescription="@string/add"
                    android:padding="10dp"
                    android:src="@drawable/packaging" />

                    <TextView
                        android:id="@+id/addProduct"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:fontFamily="serif"
                        android:layout_alignParentTop="true"
                        android:layout_alignParentStart="true"
                        android:layout_marginTop="10dp"
                        android:layout_marginStart="10dp"
                        android:text="@string/add_product"
                        android:textColor="@color/black"
                        android:textSize="17sp" />
                </RelativeLayout>

            </androidx.cardview.widget.CardView>
        </LinearLayout>

        <LinearLayout
            android:id="@+id/linear2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:gravity="center"
            android:orientation="horizontal"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/linear1">

            <androidx.cardview.widget.CardView
                android:id="@+id/cardOffer"
                android:layout_width="0dp"
                android:layout_height="120dp"
                android:layout_margin="10dp"
                android:layout_weight="1"
                android:clickable="true"
                android:focusable="true"
                app:cardBackgroundColor="#F8B3B3"
                android:foreground="?android:attr/selectableItemBackground"
                app:cardCornerRadius="5dp"
                app:cardElevation="2dp">

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                <ImageView
                    android:layout_width="80dp"
                    android:layout_height="80dp"
                    android:layout_alignParentEnd="true"
                    android:layout_alignParentBottom="true"
                    android:contentDescription="@string/add"
                    android:padding="10dp"
                    android:src="@drawable/special_tag" />


                <TextView
                    android:id="@+id/addOffer"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="serif"
                    android:text="@string/add_offer"
                    android:layout_marginStart="10dp"
                    android:layout_marginTop="10dp"
                    android:layout_alignParentStart="true"
                    android:layout_alignParentTop="true"
                    android:textColor="@color/black"
                    android:textSize="17sp" />
                </RelativeLayout>

            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:id="@+id/cardBanner"
                android:layout_width="0dp"
                android:layout_height="120dp"
                android:layout_margin="10dp"
                android:layout_weight="1"
                android:clickable="true"
                android:focusable="true"
                android:foreground="?android:attr/selectableItemBackground"
                app:cardCornerRadius="5dp"
                app:cardElevation="2dp"
                app:cardBackgroundColor="#CEECAB"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/cardOffer">

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">
                <ImageView
                    android:layout_width="80dp"
                    android:layout_height="80dp"
                    android:layout_alignParentEnd="true"
                    android:layout_alignParentBottom="true"
                    android:contentDescription="@string/add"
                    android:padding="10dp"
                    android:src="@drawable/banner" />


                    <TextView
                        android:id="@+id/addBanner"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:fontFamily="serif"
                        android:text="@string/add_banner"
                        android:layout_alignParentStart="true"
                        android:layout_alignParentTop="true"
                        android:layout_margin="10dp"
                        android:textColor="@color/black"
                        android:textSize="17sp" />

                </RelativeLayout>
            </androidx.cardview.widget.CardView>
        </LinearLayout>

        <com.airbnb.lottie.LottieAnimationView
            android:layout_width="match_parent"
            android:layout_height="200dp"
            app:lottie_rawRes="@raw/shopping_cart"
            app:lottie_loop="true"
            app:lottie_autoPlay="true"
            android:layout_marginBottom="20dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"/>
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>